# cfgmgr

./: .gitignore  LICENSE  README.md  config.json  example.py  example2.py  pyconfig.py  pyproject.toml
example/: config.json  env.sh
src/cfgmgr/: __init__.py  loaders.py  manager.py
tests/: config.json  config_b1.json  config_b2.json  config_c.json  example.py
tests/config_files/: config.json  config_db.json
